--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,91 @@ body {
 .container {
     display: grid;
     height: 100vh;
-    width: 100vw;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 2fr 9fr;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1fr 5fr;
 }
 .sidebar {
     grid-column: 1;
     grid-row: 1 / 3;
     background-color: #8b5cf6;
+    color: white;
+    display: grid;
+    padding: 1rem 0 30rem 2rem;
 }
 .topbar {
     background-color: #f5f3ff;
+    display: grid;
+    grid-template-columns: 5fr 3fr;
 }
 .content {
     background-color: #ddd6fe;
+    display: grid;
+    grid-template-rows: 1fr repeat(3, 6fr);
+    grid-template-columns: 3fr 3fr 2fr;
+    gap: 2rem;
+    padding: 0 2rem 3rem 2rem;
+}
+.content > div:not(.contentside) {
+    background-color: #f5f3ff;
+    border-radius: 1rem;
+}
+.contentside {
+    display: grid;
+    grid-column: 3;
+    grid-row: 2 / 5;
+    background-color: #ddd6fe;
+    grid-template-rows: 12fr 1fr 12fr;
+    gap: 2rem;
+}
+.content > h2 {
+    padding-top: 2.5rem;
+    margin: 0 0 -2rem 0;
+}
+.contentside > h2 {
+    padding-top: 1.5rem;
+    margin: 0 0 -2rem 0;
+}
+.contentside > div {
+    background-color: #f5f3ff;
+    border-radius: 1rem;
+}
+.announcements {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+}
+.announcements > div{
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+}
+.announcements div:first-child {
+    border-bottom: 1px solid black;
+}
+.announcements div:last-child {
+    border-top: 1px solid black;
+}
+p {
+    margin-top: 0;
+}
+h3, h2{
+    margin-bottom: 0;
+}
+.trending {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr 4fr;
+}
+input {
+    -webkit-appearance: none;
+    border: none;
+    margin-top: 1.5rem;
+    margin-left: 8rem;
+    height: 2rem;
+    width: 100%;
+    border-radius: 1rem;
+    background-color: #ddd6fe;
+    padding-left: 1rem;
+}
+input:focus {
+    outline: none;
+    border: 2px solid #8b5cf6;
 }
