--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 :root {
-    --main-bg-color: #bfdbfe;
-    --dark-bg-color:#3b82f6;
+    --main-bg-color: #dbe4f0;
+    --dark-bg-color:#389bec;
     --light-bg-color: #eff6ff;
 }
 * {
@@ -13,14 +13,13 @@ body {
 }
 .container {
     display: grid;
-    height: 100vh;
-    grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 16vh 84vh;
 }
 .header {
     display: grid;
     grid-template-columns: 4rem 1fr;
-    margin-top: 1.5rem;
+    padding-top: 1.5rem;
 }
 h1 {
     display: flex;
@@ -39,41 +38,51 @@ h1 {
 .sidebar > div:not(.header) {
     display: grid;
     row-gap: 1rem;
-    margin-top: 4rem;
+    padding-top: 4rem;
     grid-template-columns: 4rem 1fr;
 }
 .sidebar p {
     font-size: 1.6rem;
 }
 .topbar {
+    padding: 1.5rem 3rem 0 4rem;
     background-color: var( --light-bg-color);
     display: grid;
-    grid-template-columns: 5fr 3fr;
-    grid-template-rows: 2fr 7fr;
+    align-items: center;
+    grid-template-columns: 1fr 30fr 2fr 2fr 5fr;
+    grid-template-rows: 3fr 7fr;
 }
 .content {
     background-color: var(--main-bg-color);
     display: grid;
     grid-template-rows: 1fr repeat(3, 6fr);
-    grid-template-columns: 3fr 3fr 2fr;
+    grid-template-columns: 3fr 3fr 1fr;
     gap: 2rem;
     padding: 0 2rem 3rem 2rem;
+}
+.content p {
+    color: rgb(60, 64, 73);
 }
 .cardbottom {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: end;
-    margin-right: 0;
-    padding: 3rem 4rem 0 25rem ;
+    position: absolute;
+    gap: 1rem;
+    bottom: 1rem;
+    right: 2rem;
+    
 }
 .content > div:not(.contentside) {
     background-color: var( --light-bg-color);
     border-radius: 1rem;
-    border-left: 10px solid #3fa53f;
+    border-left: 10px solid #2a2a2a;
     padding: 2rem 0rem 0 3rem;
+    position: relative;
 }
 .content > div:not(.contentside) > p {
-    margin-right: 8rem;
+    padding-right: 20%;
+    font-size: 1.2rem;
 }
 .contentside {
     display: grid;
@@ -97,36 +106,67 @@ h1 {
 }
 .announcements {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    padding: 1.5rem 3rem 1.5rem 3rem;
 }
-.announcements > div{
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
+.announcements p {
+    font-size: .85rem;
 }
 .announcements div:first-child {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid var(--main-bg-color);
 }
 .announcements div:last-child {
-    border-top: 1px solid black;
+    border-top: 2px solid var(--main-bg-color);
 }
 p {
     margin-top: 0;
 }
-h3, h2{
+h3, h2, h4{
     margin-bottom: 0;
 }
 .trending {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: 1fr 4fr;
+    align-items: center;
+    justify-items: center;
+    padding: 2rem 8rem 2rem 8rem;
+}
+.trending img {
+    height: 60px;
+    width: 60px;
+    border-radius: 60px;
+}
+.topbar img:nth-child(4){
+    width: 60px;
+    height: 60px;
+    border-radius: 60px;
+}
+.topbar h2 {
+    margin: 0;
+}
+.topbar2 {
+    display: grid;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 1 / 6;
+    grid-template-columns: 2fr 18fr 3fr 3fr 3fr;
+}
+.topbar2 img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+}
+.topbar2 h1 {
+    display: block;
+}
+.topbar p {
+    margin: 0;
 }
 input {
     -webkit-appearance: none;
     border: none;
-    margin-top: 1.5rem;
-    margin-left: 8rem;
-    height: 2rem;
-    width: 100%;
+    height: 2.2rem;
+    width: 80%;
     border-radius: 1rem;
     background-color: var(--main-bg-color);
     padding-left: 1rem;
@@ -134,4 +174,13 @@ input {
 input:focus {
     outline: none;
     border: 2px solid var(--dark-bg-color);
+}
+button {
+    background-color: var(--dark-bg-color);
+    border: none;
+    height: 3rem;
+    width: 8rem;
+    border-radius: 3rem;
+    color: white;
+    font-size: 1.2rem;
 }
