--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,16 @@ body {
 }
 .container {
     display: grid;
-    grid-template-columns: 1fr 8fr;
+    grid-template-columns: 11vw 89vw;
     grid-template-rows: 16vh 84vh;
 }
 .header {
     display: grid;
-    grid-template-columns: 4rem 1fr;
+    grid-template-columns: 2vw 1fr;
     padding-top: 1.5rem;
 }
 h1 {
-    display: flex;
+    display: flex; /*Perfect example of flexbox just being better sometimes*/
     margin: 0;
     align-items: center;
     height: 100%;
@@ -32,36 +32,48 @@ h1 {
     grid-row: 1 / 3;
     background-color: var(--dark-bg-color);
     color: white;
-    padding: 0 0 60rem 1.5rem;
+    padding-left: 0.75vw;
     font-weight: 500;
+    font-size: 0.65vw;
 }
 .sidebar > div:not(.header) {
     display: grid;
-    row-gap: 1rem;
+    row-gap: 3vh;
     padding-top: 4rem;
-    grid-template-columns: 4rem 1fr;
+    grid-template-columns: 2vw 1fr;
+}
+.sidebar img{
+    width: 1.5vw;
+    height: 1.5vw;
+    height: 1.5vw;
 }
 .sidebar p {
-    font-size: 1.6rem;
+    font-size: 1.1vw;
 }
 .topbar {
-    padding: 1.5rem 3rem 0 4rem;
+    padding: 1vh 0 0 2.5vw;
     background-color: var( --light-bg-color);
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 30fr 2fr 2fr 5fr;
+    grid-template-columns: 2vw 66vw 4vw 4vw 9vw;
     grid-template-rows: 3fr 7fr;
+    box-shadow: 3px 4px 3px rgb(182, 191, 194);
 }
 .content {
     background-color: var(--main-bg-color);
     display: grid;
     grid-template-rows: 1fr repeat(3, 6fr);
-    grid-template-columns: 3fr 3fr 1fr;
+    grid-template-columns: 5fr 5fr 2fr;
     gap: 2rem;
     padding: 0 2rem 3rem 2rem;
 }
 .content p {
     color: rgb(60, 64, 73);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
 .cardbottom {
     display: grid;
@@ -77,39 +89,55 @@ h1 {
     background-color: var( --light-bg-color);
     border-radius: 1rem;
     border-left: 10px solid #2a2a2a;
-    padding: 2rem 0rem 0 3rem;
     position: relative;
+    box-shadow: 3px 4px 3px rgb(182, 191, 194);
 }
 .content > div:not(.contentside) > p {
-    padding-right: 20%;
+    padding-right: 4vw;
     font-size: 1.2rem;
+    margin-left: 2vw;
+}
+.content > div:not(.contentside) > h2 {
+    margin-left: 2vw;
+    margin-top: 3vh;
 }
 .contentside {
     display: grid;
+    align-content: space-between;
     grid-column: 3;
     grid-row: 2 / 5;
     background-color: var(--main-bg-color);
-    grid-template-rows: 12fr 1fr 12fr;
-    gap: 2rem;
+    grid-template-rows: 32vh 3.5vh 30vh;
+    gap: 2.5vh;
 }
 .content > h2 {
-    padding-top: 2.5rem;
-    margin: 0 0 -2rem 0;
+    margin-bottom: -2vh;
+    margin-top: 3vh;
 }
 .contentside > h2 {
-    padding-top: 1.5rem;
-    margin: 0 0 -2rem 0;
+    margin: 2.5vh 0 -1.5rem 0;
 }
 .contentside > div {
     background-color: var( --light-bg-color);
     border-radius: 1rem;
+    box-shadow: 3px 4px 3px rgb(182, 191, 194);
 }
 .announcements {
     display: grid;
-    padding: 1.5rem 3rem 1.5rem 3rem;
+    padding: 1vh 1vw 1vh 1vw;
 }
 .announcements p {
-    font-size: .85rem;
+    font-size: 1.2vh;
+    max-height: 6vh;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    margin: 0;
+}
+.announcements h3 {
+    font-size: 1.5vh;
 }
 .announcements div:first-child {
     border-bottom: 2px solid var(--main-bg-color);
@@ -120,7 +148,7 @@ h1 {
 p {
     margin-top: 0;
 }
-h3, h2, h4{
+h3, h2{
     margin-bottom: 0;
 }
 .trending {
@@ -129,32 +157,39 @@ h3, h2, h4{
     grid-template-columns: 1fr 4fr;
     align-items: center;
     justify-items: center;
-    padding: 2rem 3.5rem 2rem 2rem;
+    padding: 1vh 1vw 1vh 1vw;
+}
+.trending h4, p {
+    margin: 0;
 }
 .trending img {
-    height: 60px;
-    width: 60px;
+    height: 4.5vh;
+    width: 4.5vh;
     border-radius: 60px;
+    object-fit: cover;
 }
 .topbar img:nth-child(4){
-    width: 60px;
-    height: 60px;
+    width: 4.5vh;
+    height: 4.5vh;
     border-radius: 60px;
+    object-fit: cover;
 }
 .topbar h2 {
     margin: 0;
+    font-size: 1vw;
 }
 .topbar2 {
     display: grid;
     align-items: center;
     grid-row: 2;
     grid-column: 1 / 6;
-    grid-template-columns: 2fr 18fr 3fr 3fr 3fr;
+    grid-template-columns: 5vw 59vw 8vw 8vw 8vw;
 }
 .topbar2 img {
-    width: 100px;
-    height: 100px;
+    width: 8vh;
+    height: 8vh;
     border-radius: 100px;
+    object-fit: cover;
 }
 .topbar2 h1 {
     display: block;
@@ -165,7 +200,7 @@ h3, h2, h4{
 input {
     -webkit-appearance: none;
     border: none;
-    height: 2.2rem;
+    height: 3vh;
     width: 80%;
     border-radius: 1rem;
     background-color: var(--main-bg-color);
@@ -178,9 +213,9 @@ input:focus {
 button {
     background-color: var(--dark-bg-color);
     border: none;
-    height: 3rem;
-    width: 8rem;
+    height: 4vh;
+    width: 10vh;
     border-radius: 3rem;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.75vh;
 }
